--- a/index.html
+++ b/index.html
@@ -3,26 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Labs 4 & 5: Interactive Data Visualization with D3.js</title>
+    <title>Chicago Crime: Interactive Visualization</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <div class="container"> <!-- Centers content and sets max width -->
-        <h1>Labs 4 & 5: Interactive Data Visualization with D3.js</h1>
-        <div id="controls">
-            <p id="value"></p>
-            <div id="slider"></div>
-            X: <select id="xVariable" class="variable"></select>
-            Y: <select id="yVariable" class="variable"></select>
-            size: <select id="sizeVariable" class="variable"></select>
-        </div>
+        <h1>Chicago Crime: Interactive Visualization</h1>
         <div id="vis"></div> <!--  Will hold our visualization (SVG) -->
     </div>
     <div id="tooltip" style="display:none"></div> 
     
     <!-- Load D3.js -->
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="https://unpkg.com/d3-simple-slider"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
