--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Chicago Crime: Interactive Visualization</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
+<body style="background-color:#fff3f0">
     <div class="container"> <!-- Centers content and sets max width -->
         <h1>Chicago Crime: Interactive Visualization</h1>
         <div id="vis"></div> <!--  Will hold our visualization (SVG) -->
